_sass/_0variables.scss
//FONTS

$sans: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", sans-serif;
$script: "Kaushan Script", "Segoe Scipt", Gabriola, Markerfelt-Thin, sans-serif;

$body-font-sz: 100%;
$smaller-font: 87.5%;
$bigger-font: 112.5%;
$body-line-ht: 1.5em;
$body-font: 300 #{$body-font-sz}/#{$body-line-ht} $sans;
$bold: 400;
$normal: 300;

//COLORS
$white: #fff;  //in case I decide to use a slightly off-white

$neutral-dark: #444;
$neutral-light: #ddd;
$neutral-med: #999;

$teal: #067;
$dark-teal: #034;
$lt-teal: #abc;
$purple: #324;
$lt-purple: #436;

$body-text-color: $neutral-dark;
$body-link-color: $lt-purple;
$highlight-color: $neutral-light;
$header-neutral: $neutral-dark;
$border-neutral: $neutral-med;

// BREAKPOINTS (adapted from Jon Thomas)

@mixin at-least($breakpoint) {
    @media only screen and (min-width: $breakpoint) { @content; }
}

@mixin between($bp1,$bp2) {
	@media only screen and (min-width: $bp1) and (max-width: $bp2 - 0.1) { @content; }
}

@mixin hi-res {
	@media only screen and (min-device-width: 1400px) and (max-resolution: 1dppx) { @content; }
}

$modern: 1em;  //override ie8- styles (also mobile-first single column)
$two-col: 30em; //2 col masonry (change script if value changes)
$stacked-menu: 33em; //room for menu items single file left of wordmark, font to full? or sooner?
$full-width: 56em; //room for multi-column boxes, 2-col certs, 1em table fonts, 3-col masonry, grad-menu

//Legacy widths: Fixed widths for IE6-8. (Not for media queries)
$legacy-wrap: 62em; //page wrap width

